app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoapp
spec:
  selector:
    matchLabels:
      app: photoapp
  replicas: 3
  template:
    metadata:
      labels:
        app: photoapp
    spec:
      containers:
      - image: ravindrasingh6969/nodeapp:latest
        name: photoapp
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: photoapp
spec:
  ports:
  - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
    targetPort: 8080 #container port
    protocol: TCP
  type: ClusterIP
  selector:
    app: photoapp
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photoapp
  annotations:
    # AWS-specific annotations for SSL and the load balancer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nlb.ingress.kubernetes.io/scheme: "internet-facing"
    nlb.ingress.kubernetes.io/target-type: "ip"
    nlb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    nlb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:eu-central-1:783764588202:certificate/bbf15876-8f60-4f50-bc4c-d89fa6ab3b6b"
    nlb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: nginx
  rules:
    - host: new.app.monlabo.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: photoapp
                port:
                  number: 80
          - path: /ping
            pathType: Prefix
            backend:
              service:
                name: photoapp
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: photoapp
                port:
                  number: 80  
          - path: /error
            pathType: Prefix
            backend:
              service:
                name: photoapp
                port:
                  number: 80
